<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AoE Clicker</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello World!</string>
	<string name="action_search">Search !</string>
	<string name="food_amount">Food: 0</string>
	<string name="wood_amount">Wood: 0</string>
	<string name="metal_amount">Metal: 0</string>
	<string name="foodButtonText">Gather food</string>
	<string name="woodButtonText">Chop wood</string>
	<string name="metalButtonText">Mine iron ore</string>
	
</resources>
