<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
    <LinearLayout 
	    android:id="@+id/resource_counter"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="5dp">
		    <TextView
		        android:id="@+id/food_counter"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:text="@string/food_amount"
		        android:textSize="15sp"
		        android:gravity="center_horizontal"
			/>
		    <TextView
		        android:id="@+id/wood_counter"
		        android:layout_width="0dp"
		       	android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:text="@string/wood_amount"
		        android:textSize="15sp"
		        android:gravity="center_horizontal"
			/>
		    <TextView
		        android:id="@+id/metal_counter"
		        android:layout_width="0dp"
	     	    android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:text="@string/metal_amount"
		        android:textSize="15sp"
		        android:gravity="center_horizontal"
			/>
	</LinearLayout>
    <LinearLayout
	    android:id="@+id/gather_buttons" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" 
	    android:layout_below="@id/resource_counter">
		    <Button
		        android:layout_width="0dp"
	     	    android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:text="@string/foodButtonText" 
		        android:onClick="foodButtonClick"
		        android:textSize="14sp"
		    />
		    <Button
		        android:layout_width="0dp"
	     	    android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:text="@string/woodButtonText" 
		        android:onClick="woodButtonClick"
		        android:textSize="14sp"
		    />
		    <Button
		        android:layout_width="0dp"
	     	    android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:text="@string/metalButtonText" 
		        android:onClick="metalButtonClick"
		        android:textSize="14sp"
		    />
   	</LinearLayout>
</RelativeLayout>